# chess_pgn_analyzer_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  localtunnel-server.yml  localtunnelDNStutorial.md  postgres-compose.yml  pyproject.toml  run.py
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 282097ac9157_test.py  3c21865fdd60_init.py  724962f0ad4d_update_game_model.py  f4e26df25648_initial_migration.py  f7642ec46928_stockfish_move_analysis.py
src/chess_pgn_analyzer_api/: database.py  init_db.py  main.py  wait_for_db.py
src/chess_pgn_analyzer_api/models/: __init__.py  archive.py  game.py  player.py
src/chess_pgn_analyzer_api/routes/: games.py  moves.py  players.py
utils/: dashboard.py  db_reset_init.py
