[project]
name = "chess-pgn-analyzer-api"
version = "1.0.0"
description = "FastAPI based API to download and analyze your games from chess.com"
authors = [
    { name = "tadeasf", email = "business@tadeasfort.com" }
]
dependencies = [
    "fastapi>=0.114.2",
    "uvicorn>=0.30.6",
    "sqlmodel>=0.0.22",
    "requests>=2.32.3",
    "python-chess>=1.999",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "asyncpg>=0.29.0",
    "greenlet>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
